--- a/browserSpecific.html
+++ b/browserSpecific.html
@@ -11,7 +11,7 @@
     <!-- <script>
         console.log("Internal Html script tag1"); //picked 
     </script> -->
-     <script src="Objects.js"> </script>
+     <script src="Arrays.js"> </script>
 </body>
 
 </html>
