destructuring objects and arrays

--- a/index1.html
+++ b/index1.html
@@ -2,16 +2,16 @@
 <html>
 
 <head>
-    <title>Browser Specific</title>   
+    <title>Index Page</title>   
     </script>
 </head>
 
 <body>
-    <div><input id="sample"></input></div>
+    <!-- <div><input id="sample"></input></div> -->
     <!-- <script>
         console.log("Internal Html script tag1"); //picked 
     </script> -->
-     <script src="loops.js"> </script>
+     <script src="destructuring.js"> </script>
 </body>
 
 </html>
