--- a/index1.html
+++ b/index1.html
@@ -11,7 +11,7 @@
     <!-- <script>
         console.log("Internal Html script tag1"); //picked 
     </script> -->
-     <script src="mapfilter.js"> </script>
+     <script type="module" src="import.js"> </script>
 </body>
 
 </html>
