react js basics

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 </head>
 
 <body>
-  <h1>H1: Welcome to Ashok IT</h1>
+  <h1 class='h1'>H1: Welcome to Ashok IT</h1>
+  <header className="App-header">
   <h2>H2: Welcome to Ashok IT</h2>
   <h3>H3: Welcome to Ashok IT</h3>
   <h4>H4: Welcome to Ashok IT</h4>
