react list and keys

--- a/index.html
+++ b/index.html
@@ -12,18 +12,16 @@
       font-size: 15px;
     }
 
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
+    .header1 {
       color: red;
       background-color: yellow;
       text-align: center;
       padding: 10px;
       border: 1px solid red;
       border-radius: 0px 50px 0px 50px;
+    }
+    #header2{
+      color:blue;
     }
   </style>
   <!-- include the javascript file-->
@@ -37,11 +35,13 @@
 </head>
 
 <body>
-  <h1 class='h1'>H1: Welcome to Ashok IT</h1>
-  <header className="App-header">
-  <h2>H2: Welcome to Ashok IT</h2>
+  <h1 class="header1">H1: Welcome to Ashok IT</h1>
+   className 
+  <h1 class="header1">H1: Sub </h1>
+  <h1>H1: Sub 1</h1>
+  <h2 id="header2">H2: Welcome to Ashok IT</h2>
   <h3>H3: Welcome to Ashok IT</h3>
-  <h4>H4: Welcome to Ashok IT</h4>
+  <h4 class="header1">H4: Welcome to Ashok IT</h4>
   <h5>H5: Welcome to Ashok IT</h5>
   <h6>H6: Welcome to Ashok IT</h6>
 </body>
